--- a/stylesheets/constants.styl
+++ b/stylesheets/constants.styl
@@ -55,3 +55,17 @@ ASIDE_INDEX                     = 201
 FULL_ASIDE_INDEX                = 50
 
 NOTIFICATION_INDEX              = 400
+
+// COLORS
+BLUE    = #1f4dbb
+RED     = #d10400
+YELLOW  = #f0d31e
+BLACK   = #000000
+WHITE   = #ffffff
+GREY    = #c0c0c0
+GREEN   = #02ac00
+PINK    = #ff56d0
+PURPLE  = #9f2ae4
+BROWN   = #813a0e
+ORANGE  = #ff7404
+FIREFOX = #FF6600
