--- a/stylesheets/theme/generic/Theme.media.styl
+++ b/stylesheets/theme/generic/Theme.media.styl
@@ -1,3 +1,4 @@
 @media screen and (min-width : 768px) and (orientation : landscape)
-  aside
-    box-shadow inset -4px 0 3px 1px darken(SECONDARY, 50%)!important
+  body[data-os], body[data-browser]
+      & aside
+        box-shadow inset -4px 0 3px 1px darken(SECONDARY, 50%)!important
