Fixed nav hover

--- a/stylesheets/theme/generic/Theme.article.styl
+++ b/stylesheets/theme/generic/Theme.article.styl
@@ -83,7 +83,7 @@ body[data-os], body[data-browser]
   & aside .current, & footer .current
     background-color SECONDARY_ACTIVE
 
-  & aside li, & footer button, & footer input[type=submit], & footer input[type=reset], & footer input[type=button]
+  & aside li, & article > nav button , & article > nav .button , & footer button, & footer .button, & footer input[type=submit], & footer input[type=reset], & footer input[type=button]
     &:active, &:hover
       background-color SECONDARY_ACTIVE
 
