--- a/stylesheets/theme/android/main.styl
+++ b/stylesheets/theme/android/main.styl
@@ -18,9 +18,12 @@ body[data-os="android"]
     color SECONDARY_TEXT !important
     background-image none !important
 
-    & button
+    & button, & .button
       border none !important
       box-shadow none !important
+  & section
+    & button, & .button
+      font-weight 300
   & footer
     background-color BACKGROUND !important
     color lighten(TEXT, 25%) !important
@@ -29,15 +32,19 @@ body[data-os="android"]
 
     & *
       height HEADER_HEIGHT
+      &.icon
+        &:empty
+          font-size 0.9em !important
+          margin-top 6px
+
     & button, & .button, & input[type=submit], & input[type=reset], & input[type=button]
       background-color BACKGROUND
       padding-bottom 15px
       &:active, &:hover
-        & .counter
-          background-color darken(BACKGROUND, 15%)
+        background-color darken(BACKGROUND, 15%)
       &.current
         background-color BACKGROUND !important
-        border-top 8px solid THEME !important
+        border-top 4px solid THEME !important
         padding-top 0
         padding-bottom 20px
 
@@ -97,9 +104,9 @@ body[data-os="android"]
           border-right none
           &:after
             background-color transparent
-      & button
-        &:active
-          box-shadow none !important
+      & button, & .button
+        &:active, &:hover
+          background-color darken(BACKGROUND, 15%)
 
 
       & *
