WP forms, lists

--- a/stylesheets/theme/generic/Theme.article.styl
+++ b/stylesheets/theme/generic/Theme.article.styl
@@ -50,7 +50,7 @@ body[data-os], body[data-browser]
         & .counter
           background-color SECONDARY
       &.current
-        border-top 4px solid THEME !important
+        border-top 4px solid THEME
 
     & > nav > *
       border-right 1px solid darken(SECONDARY, 15%)
