--- a/package/stylesheets/tako.android.css
+++ b/package/stylesheets/tako.android.css
@@ -67,6 +67,63 @@
 /* TaKo v1.2.1 - 01/12/2014
    http://takojs.com
    Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 01/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
 /* TaKo v1.2.1 - 30/11/2014
    http://takojs.com
    Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
