Support for input buttons

--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -73,7 +73,7 @@ body[data-os="ios"]
       color lighten(TEXT, 25%) !important
   & section
     background-color IOS_BACKGROUND !important
-    & button, & .button
+    & button, & .button, & input[type="button"], & input[type="submit"], & input[type="reset"]
       background-image none !important
       background-color IOS_BACKGROUND !important
       border-radius 4px !important
