--- a/stylesheets/theme/wp/main.styl
+++ b/stylesheets/theme/wp/main.styl
@@ -118,7 +118,7 @@ body[data-os="wp"]
         background-color transparent
         color TEXT
         border-color TEXT
-    & button, & .button
+    & button, & .button, & input[type="button"], & input[type="submit"], & input[type="reset"]
       background-image none !important
       background-color transparent !important
       border-radius 0 !important
