Firefoxos first commit

--- a/stylesheets/theme/constants.styl
+++ b/stylesheets/theme/constants.styl
@@ -7,7 +7,7 @@ SECONDARY_TEXT      = #F4F4F4
 FAIL                = #ed1c13
 SUCCESS             = #199c12
 DISABLED            = #acb8b9
-BACKGROUND          = #e7e7e7
+BACKGROUND          = #f7f7f7
 FONT                = 14px  "tako"
 FONT_FAMILY         = "tako"
 FONT_SIZE           = 16px
