--- a/package/stylesheets/tako.theme.css
+++ b/package/stylesheets/tako.theme.css
@@ -1,3 +1,15 @@
+/* TaKo v1.2.1 - 05/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 05/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 04/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v1.2.1 - 04/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
 /* TaKo v1.2.1 - 04/12/2014
    http://takojs.com
    Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
